adding admonition with link to part 5 app

--- a/docs/get-started/python-quickstart/index.mdx
+++ b/docs/get-started/python-quickstart/index.mdx
@@ -27,6 +27,13 @@ You can choose to stop at the end of any part of the tutorial and still have a w
 Each part of the tutorial corresponds to a working example in the [Resonate Python SDK examples repository](https://github.com/resonatehq/examples-py/tree/main/quickstart).
 Each code example has a link above it that will take you to the source code in the repository.
 
+:::tip Final example application
+
+Want to jump straight to working with the final example application?
+You can find the source code in the [Resonate Python SDK examples repository](https://github.com/resonatehq/examples-py/tree/main/quickstart/part-5).
+
+:::
+
 In part 1, you will start with a single [Application Node](/concepts/application-node) and observe the SDK's ability to automatically retry application-level failures (failed function executions).
 Then in part 2 you will connect your application to the Resonate Server to enable recovery from platform-level failures and see how a function execution can recover from a process crash (Durable Execution).
 In part 3 you will build on the previous example by separating your HTTP Server from your application code and run multiple Application Nodes to see how Resonate facilitates fan-out/fan-in use cases.
