expanding why resonate

--- a/docs/evaluate/features/recovery.mdx
+++ b/docs/evaluate/features/recovery.mdx
@@ -1,11 +1,11 @@
 ---
 id: recovery
-title: Call Graph recovery
-sidebar_label: Call Graph recovery
+title: Crash failure recovery
+sidebar_label: Recovery
 sidebar_position: 3
 description: Learn how Resonate helps your applications recover from failure.
 last_update:
-  date: "10-02-2024"
+  date: "12-05-2024"
 tags:
   - why-resonate
   - features
