--- a/docs/evaluate/features/transparent-batching.mdx
+++ b/docs/evaluate/features/transparent-batching.mdx
@@ -1,7 +1,9 @@
 ---
 id: transparent-batching
 title: Transparent batching
-sidebar_label: Transparent batching
+sidebar_label: Batching
+last_update:
+  date: "12-05-2024"
 ---
 
 The Resonate SDK provides a way for developers to batch operations transparently.
